ops/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: egueducation-backend
  namespace: education
spec:
  selector:
    app: egueducation-backend
  ports:
    - name: http
      port: 8080
      targetPort: http
