ops/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: egueducation-frontend
  namespace: education
spec:
  selector:
    app: egueducation-frontend
  ports:
    - name: http
      port: 8080
      targetPort: http
